--- a/src/main/resources/github/com/youknow2509/battleship/fxml/game.fxml
+++ b/src/main/resources/github/com/youknow2509/battleship/fxml/game.fxml
@@ -1,20 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Rectangle?>
-
-<VBox maxHeight="604.0" maxWidth="881.0" minHeight="604.0" minWidth="881.0" prefHeight="604.0" prefWidth="881.0" stylesheets="@../css/game.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="github.com.youknow2509.battleship.controller.GameController">
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import java.lang.String?>
+<VBox maxHeight="604.0" maxWidth="881.0" minHeight="604.0" minWidth="881.0" prefHeight="604.0" prefWidth="881.0" stylesheets="@../css/game.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <AnchorPane maxHeight="48.0" maxWidth="881.0" minHeight="48.0" minWidth="881.0" prefHeight="48.0" prefWidth="881.0">
             <children>
