--- a/src/main/resources/github/com/youknow2509/battleship/fxml/page_1.fxml
+++ b/src/main/resources/github/com/youknow2509/battleship/fxml/page_1.fxml
@@ -3,23 +3,28 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
 
-<AnchorPane maxHeight="940.0" maxWidth="914.0" minHeight="940.0" minWidth="914.0" prefHeight="940.0" prefWidth="914.0" stylesheets="@../css/game.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="github.com.youknow2509.battleship.controller.PageOneController">
+<AnchorPane maxHeight="720.0" maxWidth="1280.0" minHeight="720.0" minWidth="1280.0" prefHeight="720.0" prefWidth="1280.0" stylesheets="@../css/game.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="github.com.youknow2509.battleship.controller.PageOneController">
    <children>
-      <VBox alignment="CENTER" layoutX="381.0" layoutY="330.0" prefHeight="200.0" prefWidth="100.0" spacing="20.0">
+      <ImageView fitHeight="720.0" fitWidth="1280.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../image/Bg_BattleShip.png" />
+         </image>
+      </ImageView>
+      <HBox layoutX="118.0" layoutY="531.0" prefHeight="100.0" prefWidth="200.0" spacing="50.0">
          <children>
-            <ImageView fx:id="btnPlay" fitHeight="148.0" fitWidth="174.0" onMouseClicked="#handleChangeToInitGame" pickOnBounds="true" preserveRatio="true" styleClass="button">
+            <ImageView fx:id="btnPlay" fitHeight="200.0" fitWidth="500.0" onMouseClicked="#handleChangeToInitGame" pickOnBounds="true" preserveRatio="true" styleClass="button">
                <image>
-                  <Image url="@../image/icon_game.png" />
+                  <Image url="@../image/Play_BattleShip.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="btnQuit" fitHeight="122.0" fitWidth="127.0" onMouseClicked="#handleQuit" pickOnBounds="true" preserveRatio="true" styleClass="button">
+            <ImageView fx:id="btnQuit" fitHeight="200.0" fitWidth="511.0" onMouseClicked="#handleQuit" pickOnBounds="true" preserveRatio="true" styleClass="button">
                <image>
-                  <Image url="@../image/on-off-button.png" />
+                  <Image url="@../image/Exit_BattleShip.png" />
                </image>
             </ImageView>
          </children>
-      </VBox>
+      </HBox>
    </children>
 </AnchorPane>
