--- a/src/main/resources/github/com/youknow2509/battleship/fxml/page_1.fxml
+++ b/src/main/resources/github/com/youknow2509/battleship/fxml/page_1.fxml
@@ -12,16 +12,26 @@
             <Image url="@../image/Bg_BattleShip.png" />
          </image>
       </ImageView>
-      <HBox layoutX="118.0" layoutY="531.0" prefHeight="100.0" prefWidth="200.0" spacing="50.0">
+      <HBox layoutX="75.0" layoutY="555.0" prefHeight="100.0" prefWidth="200.0" spacing="50.0">
          <children>
-            <ImageView fx:id="btnPlay" fitHeight="200.0" fitWidth="500.0" onMouseClicked="#handleChangeToInitGame" pickOnBounds="true" preserveRatio="true" styleClass="button">
+            <ImageView fx:id="btnPlay" fitHeight="120.0" fitWidth="250.0" onMouseClicked="#handleChangeToInitGame" pickOnBounds="true" preserveRatio="true" styleClass="button">
                <image>
                   <Image url="@../image/Play_BattleShip.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="btnQuit" fitHeight="200.0" fitWidth="511.0" onMouseClicked="#handleQuit" pickOnBounds="true" preserveRatio="true" styleClass="button">
+            <ImageView fx:id="btnQuit" fitHeight="120.0" fitWidth="250.0" onMouseClicked="#handleQuit" pickOnBounds="true" preserveRatio="true" styleClass="button">
                <image>
                   <Image url="@../image/Exit_BattleShip.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="120.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true" styleClass="button">
+               <image>
+                  <Image url="@../image/doc_btn.png" />
+               </image>
+            </ImageView>
+            <ImageView onMouseClicked="#handleClickShowCopyRight" fitHeight="120.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true" styleClass="button">
+               <image>
+                  <Image url="@../image/copy_right_btn.png" />
                </image>
             </ImageView>
          </children>
